Fixed navigation bar on small devices

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -9,7 +9,8 @@
 /* NavBar and Footer Styles  */
 .navbar, .footer {
   background-color: #333;
-  overflow: hidden;
+  /* TODO: Needs a better fix so all buttons can be seen on screen */
+  overflow:auto;
 }
 
 .navbar-list, .footer-list {
